--- a/RDIP/Codes/Project.css
+++ b/RDIP/Codes/Project.css
@@ -23,3 +23,19 @@ button {
     height: 25px;
     margin: 5px;  
   }
+#form
+{
+    font-size: 20px;
+    color: #0000b3;
+    font-weight: bold;
+    font-family: 'Kumbh Sans', sans-serif;
+}
+#sent
+{
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 25px;
+    color:#404245;
+    font-weight: bold;
+    
+}
