Get correct sentence

--- a/RDIP/Codes/Project.css
+++ b/RDIP/Codes/Project.css
@@ -39,3 +39,9 @@ button {
     font-weight: bold;
     
 }
+#getans
+{
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 10px;
+}
