--- a/RDIP/Codes/Project.css
+++ b/RDIP/Codes/Project.css
@@ -34,14 +34,20 @@ button {
 {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 25px;
+    font-size: 30px;
     color:#404245;
     font-weight: bold;
     
 }
-#getans
+#answer
 {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 10px;
+    font-size: 18px;
+}
+#ans
+{
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+    
 }
